# nexium

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  extractors.rs  jwt.rs  lib.rs  metrics.rs  rate_limit.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: engine.rs  lib.rs  orderbook.rs  types.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: Nexium Exchange.html  nexium.postman.json
migrations/: Dockerfile
migrations/postgres/: 20260615120000_init_schema.sql  20260617000000_seed_trading_pairs.sql  20260618000000_seed_fee_tiers.sql
migrations/timescale/: 20260615120000_init_market.sql  20260617000000_ohlcv_compression.sql
nginx/: nginx.conf
services/auth/: Cargo.toml
services/auth/src/: error.rs  jwt.rs  lib.rs  main.rs  middleware.rs  password.rs  repository.rs  routes.rs
services/auth/tests/: integration.rs
services/gateway/: Cargo.toml
services/gateway/src/: lib.rs  ws.rs
services/market-data/: Cargo.toml
services/market-data/src/: lib.rs  main.rs  repository.rs  routes.rs
services/market-data/tests/: integration.rs
services/order/: Cargo.toml
services/order/src/: lib.rs  main.rs  repository.rs  routes.rs  settlement.rs  snapshot.rs
services/order/tests/: integration.rs
services/wallet/: Cargo.toml
services/wallet/src/: lib.rs  main.rs  repository.rs  routes.rs
services/wallet/tests/: integration.rs
web/: Dockerfile
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/register/: page.tsx
web/src/app/(dashboard)/trade/: page.tsx
web/src/app/(dashboard)/wallet/: page.tsx
web/src/components/: header.tsx
web/src/components/trading/: chart-panel.tsx  market-sidebar.tsx  open-orders.tsx  order-form.tsx  orderbook.tsx  recent-trades.tsx  wallet-panel.tsx
web/src/lib/: api.ts  auth-context.tsx  utils.ts
