[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/config",
    "crates/telemetry",
    "crates/db",
    "crates/matching-engine",
    "services/auth",
    "services/wallet",
    "services/order",
    "services/market-data",
    "services/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Romando Purba <romando.purba125@gmail.com>"]
repository = "https://github.com/MandoPurba/nexium"

[workspace.dependencies]
# Internal crates
nexium-core = { path = "crates/core" }
nexium-config = { path = "crates/config" }
nexium-telemetry = { path = "crates/telemetry" }
nexium-db = { path = "crates/db" }
nexium-matching-engine = { path = "crates/matching-engine" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal (required for finance)
rust_decimal = { version = "1", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Web
actix-web = "4"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Validation
validator = { version = "0.18", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
