[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/config",
    "crates/telemetry",
    "crates/db",
    "crates/matching-engine",
    "services/auth",
    "services/wallet",
    "services/order",
    "services/market-data",
    "services/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Romando Purba <romando.purba125@gmail.com>"]
repository = "https://github.com/MandoPurba/nexium"

[workspace.dependencies]
# Internal crates
nexium-core = { path = "crates/core" }
nexium-config = { path = "crates/config" }
nexium-telemetry = { path = "crates/telemetry" }
nexium-db = { path = "crates/db" }
nexium-matching-engine = { path = "crates/matching-engine" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal (required for finance)
rust_decimal = { version = "1", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.15.24"
dotenvy = "0.15"

# Web
actix-web = "4.13.0"
actix-ws = "0.4.0"
# Messaging
async-nats = "0.49.1"

# Futures
futures-util = "0.3.32"

# Rate limiting
actix-governor = "0.8"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"

# Metrics
prometheus = "0.13"

# Crypto (for API key hashing)
sha2 = "0.10"
hex = "0.4"

# Database
sqlx = { version = "0.9.0", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }

# OpenAPI docs
utoipa = { version = "5.5", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
