[package]
name = "nexium-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Environment and configuration loading for Nexium services."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
