[package]
name = "nexium-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types, errors, and primitives for Nexium."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
