[package]
name = "nexium-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared domain types, errors, and primitives for Nexium."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }

actix-web = { workspace = true }
jsonwebtoken = { workspace = true }
actix-governor = { workspace = true }
prometheus = { workspace = true }
