[package]
name = "nexium-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database pool, migrations runner, and shared sqlx helpers."

[dependencies]
nexium-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
