[package]
name = "nexium-matching-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust limit-order-book matching engine (price-time priority)."

[dependencies]
rust_decimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
