[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Auth service — registration, login, JWT issuance."

[dependencies]
nexium-core = { workspace = true }
nexium-config = { workspace = true }
nexium-telemetry = { workspace = true }
nexium-db = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

actix-web = { workspace = true }
sqlx = { workspace = true }
argon2 = "0.5"
validator = { workspace = true }
