[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Auth service — registration, login, JWT issuance."

[dependencies]
nexium-core = { workspace = true }
nexium-config = { workspace = true }
nexium-telemetry = { workspace = true }
nexium-db = { workspace = true }
wallet-service = { path = "../wallet" }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

actix-web = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
validator = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
