[package]
name = "market-data-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Market data service — OHLCV aggregation, orderbook snapshots, trade history."

[dependencies]
nexium-core = { workspace = true }
nexium-config = { workspace = true }
nexium-telemetry = { workspace = true }
nexium-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
