[package]
name = "market-data-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Market data service — OHLCV aggregation, orderbook snapshots, trade history."

[dependencies]
nexium-core = { workspace = true }
nexium-config = { workspace = true }
nexium-telemetry = { workspace = true }
nexium-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
